--- a/employe/templates/emp_exp_dt.html
+++ b/employe/templates/emp_exp_dt.html
@@ -61,7 +61,7 @@
                                 </div>
                                 <div class="row pt-1">
                                     <div class="col-12 mb-3">
-                                        <a href="/emp_exp_update/{{e.id}}"
+                                        <a href="emp_exp_update/{{e1.id}}"
                                             class="btn btn-outline-success btn-lg">Update Your Experience Details</a>
 
                                     </div>
